--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,6 +1,6 @@
 spring.datasource.url=jdbc:mysql://localhost:3306/spring
 spring.datasource.username=root
-spring.datasource.password=Varsha1234
+spring.datasource.password=Lakshma0467__
 spring.jpa.hibernate.ddl-auto=create
 spring.servlet.multipart.max-file-size=20MB
 
